--- a/server/package.json
+++ b/server/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^8.1.1",
     "nodemailer": "^8.0.0",
     "socket.io": "^4.7.4"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
